@@ -28,7 +28,7 @@
 
                 <!-- Classification -->
                 <h3 id="content_h3">Classification of Data</h3>
-                <div id="bayes" align="left" style="margin-left: 10%; margin-right: 10%;">
+                <div align="left" style="margin-left: 10%; margin-right: 10%;">
                     <p align="justify">
                         A <b>classifier</b> is able to sort data in the appropriate categories based on a set of training data containing 
                         information whose category membership is known. An example would be trying to figure out if a mail is spam or not a spam.
@@ -39,7 +39,7 @@
 
                 <!-- Naive Bayes Classifier -->
                 <h3 id="content_h3">What is a Naive Bayes Classifier? </h3>
-                <div id="bayes" align="left" style="margin-left: 10%; margin-right: 10%;">
+                <div align="left" style="margin-left: 10%; margin-right: 10%;">
                     <p align="justify">
                         <b>Naive Bayes Classifier</b> is a probabilistic classifier that can sort data into the appropriate 
                         categories using Bayes' Theorem.The Bayes' theorem is shown below.
@@ -58,7 +58,7 @@
                 <!-- What can it be used for? -->
                 <div style="padding: 50px;">
                     <h3 id="content_h3">What can it be used for?</h3>
-                    <div id="bayes" align="left" style="margin-left: 10%;">
+                    <div align="left" style="margin-left: 10%;">
                         <p>A classifier can be used for many things. But to name a few, a classifier may be used for: </p>
                         <ul>
                             <li>Machine Learning</li>
@@ -70,7 +70,7 @@
 
                     <!-- Installation -->
                     <h3 id="content_h3" >Installation</h3>
-                    <div id="bayes" align="left" style="margin-left: 10%;">
+                    <div align="left" style="margin-left: 10%;">
                         <p>To install the program:</p>
                         <ol>
                             <li>Make sure that you have <a href="https://www.java.com/en/download/win10.jsp">Java installed</a>. </li>
@@ -86,7 +86,7 @@
 
                     <!-- Usage -->
                     <h3 id="content_h3">Usage</h3>
-                    <div id="bayes" align="left" style="margin-left: 10%;"> 
+                    <div align="left" style="margin-left: 10%;"> 
                         <p>To use the program:</p>
                         <ol>
                             <li>Compile the program using an IDE or a command line </li>
@@ -102,7 +102,7 @@
 
                     <div> <!-- Contribute -->
                         <h3 id="content_h3">Contribute</h3>
-                        <p>To contribute, please use <a href="https://guides.github.com/introduction/flow/">Github Flow</a>.</p>
+                        <p style="margin-left: 10%; margin-right: 10%">To contribute, please use <a href="https://guides.github.com/introduction/flow/">Github Flow</a>.</p>
                     </div>
                 </div>
             </div>
