@@ -30,7 +30,7 @@
                     The Employee Management System is a project that was created in class. It is a basic system that helps managers manage employees. 
                     The system has the functions listed below.
                 </p>
-                <div align="left" style="margin-left: 30%;">
+                <div align="left" style="margin-left: 10%;">
                     <ul>
                         <li>Registration system</li>
                         <li>Login system</li>
@@ -40,9 +40,9 @@
                     </ul>
                 </div>
                 <p>Below are some screen shots of the Employee Management System's interface.</p>
-
-                <!-- Slide Show -->
             </div>
+
+            <!-- Slide Show -->
             <div align="center">
                 <div style="margin-left: -91px; margin-right: -91px; height: 450px; padding-top: 30px; background: #3c464c;">
                     <img src="https://dmctruong.000webhostapp.com/images/employee_login.png" class="image_slides" style="width:870px; height:300px">
@@ -63,22 +63,38 @@
                     <script> showDivs(slideIndex);</script>
                 </div>
 
-                <div> <!-- Installation -->
-                    <h3 id="content_h3">Installation</h3>
-                    <p>To install the program, download it, then compile it.</p>
-                    <!-- Download at GitHub-->
+                <!-- Installation -->
+                <h3 id="content_h3">Installation</h3>
+                <div align="left" style="margin-left: 10%;">
+                    <p>To install the program:</p>
+                    <ol>
+                        <li>Make sure that you have <a href="https://www.java.com/en/download/win10.jsp">Java installed</a>. </li>
+                        <li>Download the program from GitHub.</li>
+                        <li>Extract the files into a folder of your choosing.</li>
+                        <li>Compile the program using an IDE or a command line </li>
+                    </ol>
                     <p align="center">Be sure to check out the instructions in the README if you would like to download.</p>
+                </div>
+                <!-- Download at GitHub-->
+                <div> 
                     <a href="https://github.com/DMCTruong/Class-Projects/tree/master/Simple-Employee-Management-System" class="download_a"><button class="download" align="center">Download at GitHub</button></a>     
                 </div>
 
-                <div> <!-- Usage -->
-                    <h3 id="content_h3">Usage</h3>
-                    <p>Run the program, click register, enter information, then login, then play around with it.</p>
+                <!-- Usage -->
+                <h3 id="content_h3">Usage</h3>
+                <div align="left" style="margin-left: 10%;">
+                    <p>To use the program:</p>
+                    <ol>
+                        <li>Run the program</li>
+                        <li>Begin by registering</li>
+                        <li>Next, log into the program using the information that was registered</li>
+                        <li>If log in was a success, then one can have access to the rest of the program and its features such as database search and printing database information.</li>
+                    </ol>
                 </div>
 
                 <div>
                     <h3 id="content_h3">Support</h3>
-                    <p>To report an issue, a bug, or request a feature, please send it <a href="https://github.com/DMCTruong/Class-Projects/issues">here</a>.
+                    <p style="margin-left: 10%; margin-right: 10%">To report an issue, a bug, or request a feature, please send it <a href="https://github.com/DMCTruong/Class-Projects/issues">here</a>.
                         Be sure to add the prefix "[EMS] " to the title before submitting.</p>
                 </div>
 
